Add missing test dependency

--- a/airbyte-integrations/connectors/destination-gcs/build.gradle
+++ b/airbyte-integrations/connectors/destination-gcs/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     }
 
     testImplementation 'org.apache.commons:commons-lang3:3.11'
+    testImplementation 'org.xerial.snappy:snappy-java:1.1.8.4'
 
     integrationTestJavaImplementation project(':airbyte-integrations:bases:standard-destination-test')
     integrationTestJavaImplementation project(':airbyte-integrations:connectors:destination-gcs')
