Incremental stream. Pass read and state.

--- a/airbyte-integrations/connectors/source-netbase-insight-api/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-netbase-insight-api/sample_files/configured_catalog.json
@@ -54,14 +54,14 @@
                 "type": "string"
               },
               "topicId": {
-                "type": "string"
+                "type": "integer"
               }
             }
           }
         },
         "supported_sync_modes": ["full_refresh"]
       },
-      "sync_mode": "full_refresh",
+      "sync_mode": "incremental",
       "destination_sync_mode": "overwrite"
     }
   ]
